k8s/app-javascript/service.yml
apiVersion: v1
kind: Service
metadata:
  name: app-javascript
  labels:
    app: app-javascript
spec:
  type: LoadBalancer
  selector:
    app: app-javascript
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 8080
